# CellularAutomata

./: CMakeLists.txt  CellularAutomata.sln  README.md
CellularAutomata/: CellularAutomata.vcxproj  CellularAutomata.vcxproj.filters
include/: CellularAutomaton.hpp  CellularAutomatonManager.hpp
src/: CMakeLists.txt  CellularAutomaton.cpp  CellularAutomatonManager.cpp  GenericCellularAutomaton_main.cpp
